--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>AuraWeb</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Aura Web UI</title>
+  <%= platform_js %>
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application'%>
+  <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+</head>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<body class="aura-app"
+      ic-post-errors-to="/ic_errors"
+      ic-on-beforeTrigger="return AuraApp.checkForNewTab(evt, elt)">
 
-  <body>
+<div id="main-body"
+     ic-transition="none"
+     ic-history-elt
+     ic-scroll-to-target="true"
+     ic-scroll-offset="-100">
+
+  <%= render partial: 'shared/desktop_nav' %>
+
+  <div id="content-div" class="<%= 'top-nav-visible'%>">
+    <%= render :partial => 'shared/alerts' %>
     <%= yield %>
-  </body>
+  </div>
+
+</div>
+
+</body>
 </html>
