--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body class="aura-app"
-      ic-on-beforeTrigger="return AuraApp.checkForNewTab(evt, elt)">
+      ic-on-beforeTrigger="return App.checkForNewTab(evt, elt)">
 
 <div id="main-body"
      ic-transition="none"
