--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -1,9 +1,9 @@
 <% if notice %>
-  <script>AuraApp.showInfo("<%= notice %>");</script>
+  <script>App.showInfo("<%= notice %>");</script>
 <% end %>
 
 <% if alert %>
-  <script>AuraApp.showError("<%= alert %>");</script>
+  <script>App.showError("<%= alert %>");</script>
 <% end %>
 
 <% flash.clear  %>
