--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Aura Web UI</title>
+  <title>Janus Web Interface</title>
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
 
-<body class="aura-app"
+<body class="janus-app"
       ic-on-beforeTrigger="return App.checkForNewTab(evt, elt)">
 
 <div id="main-body"
