--- a/app/views/desktop/index.html.erb
+++ b/app/views/desktop/index.html.erb
@@ -1,2 +1,2 @@
 
-<h2>Welcome to AURA, the Automated User Resource Authentication system!</h2>
+<h2>Welcome to JANUS, gatekeeper to the machines</h2>
